data/derived/comb/progs/unify/prog8445.ml.out
Characters 100-117:
  let args = List.combine (padZero (l1 l2)) in
                          ^^^^^^^^^^^^^^^^^
Error: This expression has type int list -> int list * int list
       but an expression was expected of type 'a list
